--- a/index.html
+++ b/index.html
@@ -6,51 +6,40 @@
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   
-  <title>Bitcoin.com Paper Wallet</title>
+  <title>Bitcoin Cash Paper Wallet</title>
   
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link href="css/paper-wallet.css?version-1.3" rel="stylesheet" media="screen">
-  <link rel="icon" type="image/png" href="img/favicon.png">
   
   <!-- Open Graph tags for Facebook Shares -->
-  <meta property="og:title" content="Bitcoin Cash Paper Wallet | Bitcoin.com" />
+  <meta property="og:title" content="Bitcoin Cash Paper Wallet | KeepBitcoinFree.org" />
   <meta property="og:description" content="Create a Bitcoin Cash paper wallet for offline storage and payments" />
-  <meta property="og:image" content="https://paperwallet.bitcoin.com/img/card_default.png" />
+  <link href="img/bitcoin-cash-circle-icon-192.png" rel="icon">
+  <link href="img/bitcoin-cash-circle-icon-192.png" rel="apple-touch-icon">
+
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@Bitcoincom">
-  <meta name="twitter:title" content="Bitcoin Cash Paper Wallet | Bitcoin.com">
+  <meta name="twitter:site" content="@KeepBitcoinFree">
+  <meta name="twitter:title" content="Bitcoin Cash Paper Wallet | KeepBitcoinFree.org">
   <meta name="twitter:description" content="Create a Bitcoin Cash paper wallet for offline storage and payments">
-  <meta name="twitter:image" content="https://paperwallet.bitcoin.com/img/card_default.png">
+  <meta name="twitter:image" content="img/bitcoin-cash-circle-icon-270.png">
   
   <meta name="description" content="Create a Bitcoin Cash (BCH) paper wallet for offline storage and payments" />
   <meta name="keywords" content="bitcoin, paper wallet, bitcoin paper wallet, bitcoin cash, bitcoin cash paper wallet, bitcoin news, bitcoin forum, buy bitcoin, sell bitcoin, bitcoin store" />
-  <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-5N6TL56');</script>
-  <!-- End Google Tag Manager -->
 </head>
 
 <body>
-  <div id="bitcoincom-wgt-navbar"></div>
 
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5N6TL56"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
 
 <div class="section-1 section-1-mbl">
   <div class="container">     
     <div class="row">
       <div class="col-md-12">
-        <h3 class="h3-line">A fun and secure way to store your Bitcoins offline</h3> 
-        <h1>Bitcoin Paper Wallets</h1>  
-        <a class="btn btn-primary" href="cashwallet.html">Generate Wallet Now</a>  
-        <a class="security-recs" href="#security">Review Our Security Recommendations</a>      
+        <h3 class="h3-line glow" style="color:white;"><b>A fun and secure way to store your Bitcoin Cash offline</b></h3> 
+        <h1 class="glow" style="font-size:40pt;">Bitcoin Cash Paper Wallets</h1>  
+        <a class="btn btn-primary" href="cashwallet.html">Generate BCH Wallet Now!</a>  
+        <a class="security-recs glow" style="color:white;" href="#security">*Review Security Recommendations</a>      
       </div>
     </div>
   </div>
@@ -67,12 +56,12 @@
     <div class="row">
       <div class="col-md-7 what-is-padding">
         <h2>Why a paper wallet?</h2> 
-        <p class="content-p">Paper wallets are a fast and convenient way to store Bitcoin Cash (BCH) offline. You can even spend or gift BCH without ever connecting to the internet by treating the wallets as cash. Paper wallets are a physical way to store and spend Bitcoin Cash (BCH), like a $20 bill is a physical way to store and spend $20 USD. Like a $20 bill, paper wallets can be lost or stolen. Store your paper wallet in a safe location where only you can access.
+        <p class="content-p">Paper wallets are a fast, convenient and safe way to store Bitcoin Cash (BCH) offline. You can even spend or gift BCH without ever connecting to the internet by treating the wallets as cash. Paper wallets are a physical way to store and spend Bitcoin Cash (BCH), like a $20 bill is a physical way to store and spend $20 USD. Like a $20 bill, paper wallets can be lost or stolen. Store your paper wallet in a safe location where only you can access.
 </p>         
       </div>
 
       <div class="col-md-5">
-        <img src="img/paper-wallet-landing-page.png" class="paper-wallet-img">
+        <img src="img/paper-wallet-landing-page-kbf.png" class="paper-wallet-img">
       </div>
 
     </div>
@@ -90,7 +79,7 @@
       <div class="col-md-4 features">
         <img class="featured-img" src="img/vault-grn.png">
         <h3 class="features-h1">Cold Storage</h3>
-        <p>Paper wallets allow you to store bitcoin completely offline. For best security, we recommend <a href="https://github.com/pointbiz/bitaddress.org/archive/v3.3.0.zip">downloading the source code</a> and generating the seed offline.</p> 
+        <p>Paper wallets allow you to store bitcoin completely offline. For best security, we recommend <a href="https://github.com/KeepBitcoinFree-org/paper.keepbitcoinfree.org/archive/master.zip" target="_blank">downloading the source code</a> and generating the seed offline.</p> 
       </div>
 
       <div class="col-md-4 features">
@@ -141,7 +130,7 @@
      <div class="col-md-5">
         <h2 id="why-trust">Seed Generator Security</h2>
         <div class="why-image-div"><img src="img/safe-grn.png" class="why-image"></div>
-        <p>The wallet seed generator is based on the extensively tested <a href="https://www.bitaddress.org">Bitaddress.org</a>, which lets you generate a paper wallet in a fast and secure way. The generator uses your browser to generate the wallet, and not our servers.
+        <p>The wallet seed generator is based on the extensively tested <a target="_blank" href="https://www.bitaddress.org">Bitaddress.org</a>, which lets you generate a paper wallet in a fast and secure way. The generator uses your browser to generate the wallet, and not our servers.
         </p>     
       </div>
 
@@ -164,7 +153,7 @@
       </div>
           <div class="security-text col-md-10">
             <h3>Run Offline</h3>
-            <p>Running the generator off a live site presents bad actors the potential to intercept your paper wallet's private key. It's not likely, but to mitigate the risk we highly recommend downloading the page files from our Github first. Then turn off your internet connection and run the page locally. Just open the downloaded zip and open the index.html file in your browser. <a href="https://github.com/Bitcoin-com/paperwallet.bitcoin.com/archive/master.zip">Download Generator</a></p> 
+            <p>Running the generator off a live site presents bad actors the potential to intercept your paper wallet's private key. It's not likely, but to mitigate the risk we highly recommend downloading the page files from our Github first. Then turn off your internet connection and run the page locally. Just open the downloaded zip and open the index.html file in your browser. <a href="https://github.com/KeepBitcoinFree-org/paper.keepbitcoinfree.org/archive/master.zip">Download Generator</a></p> 
           </div>
       </div>
 
@@ -222,7 +211,7 @@
     <div class="row">
       <div class="col-md-6">
 
-        <h2>Why Choose Our Wallet?</h2>
+        <h2>Why Choose this Wallet?</h2>
         <div class="col-md-6 features">
           <img class="featured-img" src="img/design-grn.png">
           <h3 class="features-h1">Unique Design</h3>
@@ -251,7 +240,7 @@
 
       <div class="col-md-6">
         
-        <h2 id="how-to">How to Use Our Paper Wallet</h2>
+        <h2 id="how-to">How to Use the Paper Wallet</h2>
         <div class="panel-group" id="accordion">
   
           <div class="panel panel-default">
@@ -274,7 +263,7 @@
               </h4>
             </div>
             <div id="collapse4" class="panel-collapse collapse">
-              <div class="panel-body">First, you need a “normal” Bitcoin wallet (either an online, exchange or software wallet), which you will use to load your paper wallet. We recommend using <a href="https://wallet.bitcoin.com">our wallet</a> as you can buy Bitcoin Cash (BCH) there with your credit card. After you have the desired amount of Bitcoin Cash (BCH) in your “normal” wallet, you can deposit funds to the paper wallet by scanning the wallet’s public address and sending Bitcoin Cash (BCH) there.</div>
+              <div class="panel-body">First, you need a “normal” Bitcoin wallet (either an online, exchange or software wallet), which you will use to load your paper wallet. After you have the desired amount of Bitcoin Cash (BCH) in your “normal” wallet, you can deposit funds to the paper wallet by scanning the wallet’s public address and sending Bitcoin Cash (BCH) there.</div>
             </div>
           </div>
 
@@ -286,7 +275,7 @@
               </h4>
             </div>
             <div id="collapse5" class="panel-collapse collapse">
-              <div class="panel-body">You can verify your Bitcoin Cash (BCH) balance by using <a href="https://explorer.bitcoin.com">our block explorer</a> and scanning the public address on your paper wallet (we recommend using your phone’s camera for that). You can scan your address by clicking the small QR code icon right next to the search bar. You can also verify your balance by typing in your public key to the search bar.</div>
+              <div class="panel-body">You can verify your Bitcoin Cash (BCH) balance by using <a href="https://blockchair.com/bitcoin-cash" target="_blank">a block explorer</a> and scanning the public address on your paper wallet (we recommend using your phone’s camera for that). You can scan your address by clicking the small QR code icon right next to the search bar. You can also verify your balance by typing in your public key to the search bar.</div>
             </div>
           </div>
 
@@ -307,8 +296,7 @@
                   <li>The funds will then automatically move from the paper wallet to your digital wallet.</li>
                 </ul><br/>
                 <h4>Choosing your wallet app</h4>
-                <p>If you want to redeem your paper wallet now, you can either download the <a href="https://github.com/bitcoin-portal/bitcoin-wallet-releases/releases">Bitcoin.com Wallet desktop app</a> or the <a href="https://electroncash.org/">Electron Wallet desktop app</a>.<br/><br/>
-                Alternatively, if you’re not in a rush to redeem your paper wallet, you can wait until we release a new version of the <a href="https://wallet.bitcoin.com">Bitcoin.com Wallet app for mobile</a> which supports this function (coming soon).</p>
+                <p>Coming soon!</p>
 
               </div>
             </div>
@@ -324,35 +312,19 @@
   <div class="container">     
     <div class="row">
       <div class="col-md-12" style="text-align: center;">
-         <h3>What are you waiting for?</h3><br>
-         <h1>Make Your Paper Wallet Today!</h1><br> 
-        <a class="btn btn-primary" href="cashwallet.html">Generate Wallet Now</a>      
+         <h3 class="stroked">What are you waiting for?</h3><br>
+         <h1 class="stroked">Make Your Paper Wallet Today!</h1><br> 
+        <a class="btn btn-primary stroked" href="cashwallet.html">Generate Wallet Now!</a>      
       </div>
     </div>
   </div>
 </div>
-<div id="bitcoincom-wgt-footer"></div>
 
-
-<script type="text/javascript">
-  document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-    anchor.addEventListener('click', function (e) {
-        e.preventDefault();
-
-        document.querySelector(this.getAttribute('href')).scrollIntoView({
-            behavior: 'smooth'
-        });
-    });
-});
-</script>    
-
-<script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
+<!-- <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
-<script src="https://navbar.stage.cloud.bitcoin.com/navbar.js"></script>
+<script src="https://navbar.stage.cloud.bitcoin.com/navbar.js"></script> -->
 <script src="js/jquery-3.2.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="https://footer.stage.cloud.bitcoin.com/footer.js"></script>
-    
+<script src="js/bootstrap.min.js"></script>    
   </body>
 </html>
 
