adding link to github repo and removing unused file

--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
 
 <body>
 
+<div style="position:relative;min-width:750px">
+<a href="https://github.com/KeepBitcoinFree-org/paper.keepbitcoinfree.org">
+    <img style="position: absolute; top: 0; right: 0; border: 0; width: 200px;"
+     src="img/fork-me-on-github.png" 
+     alt="Fork me on GitHub">
+</a>
+</div>
 
 <div class="section-1 section-1-mbl">
   <div class="container">     
@@ -44,9 +51,6 @@
     </div>
   </div>
 </div>
-
-
-
 
 
 <div class="section-2">
