adding instructions for shasum and shasum file for zip file, and some minor css/html updates, moving security recommendations first

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     <div class="row">
       <div class="col-md-12">
         <h3 class="h3-line glow" style="color:white;"><b>A fun and secure way to store your Bitcoin Cash offline</b></h3> 
-        <h1 class="glow" style="font-size:40pt;">Bitcoin Cash Paper Wallets</h1>  
-        <a class="btn btn-primary" href="cashwallet.html">Generate BCH Wallet Now!</a>  
-        <a class="security-recs glow" style="color:white;" href="#security">*Review Security Recommendations</a>      
+        <h1 class="glow" style="font-size:40pt;">Bitcoin Cash Paper Wallets</h1> 
+        <a style="margin-left:0; margin-right:20px;" class="btn btn-primary security-recs glow" style="color:white;" href="#security">* Security Recommendations *</a>       
+        <a class="btn btn-primary" style="margin-bottom:10px;" href="cashwallet.html">Generate BCH Wallet Now!</a>  
       </div>
     </div>
   </div>
