adding additional links to github

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <div class="row">
       <div class="col-md-12">
         <h2>Extra Security Tips</h2>
-          <p>Our paper wallet is generated using a browser-side random address generator. This means the wallet is created in your browser. No data is transmitted to our servers or across the web. Generally, it is acceptably safe to use as is. However, if you are using the wallet for larger amounts or just want to ensure extra security please take these tips into consideration.</p> 
+          <p>Our paper wallet is generated using a browser-side random address generator. This means the wallet is created in your browser. No data is transmitted to any servers or across the web. Generally, it is acceptably safe to use as is. However, if you are using the wallet for larger amounts or just want to ensure extra security please take these tips into consideration and please <a href="https://github.com/KeepBitcoinFree-org/paper.keepbitcoinfree.org" target="_blank">feel free to review the code</a>.</p> 
       </div>
       </div>
       <div class="row security-tips">
@@ -157,7 +157,7 @@
       </div>
           <div class="security-text col-md-10">
             <h3>Run Offline</h3>
-            <p>Running the generator off a live site presents bad actors the potential to intercept your paper wallet's private key. It's not likely, but to mitigate the risk we highly recommend downloading the page files from our Github first. Then turn off your internet connection and run the page locally. Just open the downloaded zip and open the index.html file in your browser. <a href="https://github.com/KeepBitcoinFree-org/paper.keepbitcoinfree.org/archive/master.zip">Download Generator</a></p> 
+            <p>Running the generator off a live site presents bad actors the potential to intercept your paper wallet's private key. It's not likely, but to mitigate the risk we highly recommend downloading the page files from <a href="https://github.com/KeepBitcoinFree-org/paper.keepbitcoinfree.org" target="_blank">our Github first</a>. Then turn off your internet connection and run the page locally. Just open the downloaded zip and open the index.html file in your browser. <a href="https://github.com/KeepBitcoinFree-org/paper.keepbitcoinfree.org/archive/master.zip">Download Generator</a></p> 
           </div>
       </div>
 
