Making github page open in new window

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
 
 <div style="position:relative;min-width:296px">
-<a href="https://github.com/KeepBitcoinFree-org/paper.keepbitcoinfree.org">
+<a href="https://github.com/KeepBitcoinFree-org/paper.keepbitcoinfree.org" target="_blank">
     <img style="position: absolute; top: 0; right: 0; border: 0; width: 200px;"
      src="img/fork-me-on-github.png" 
      alt="Fork me on GitHub">
